--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
